--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@
 	background: linear-gradient(-45deg, #2FD7A2, #23B8BD, #22DD70);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
-	height: 100vh;
+	min-height: 100vh;
 }
 
 @keyframes gradient {
